--- a/style.css
+++ b/style.css
@@ -168,14 +168,28 @@ line-height: 1.7;
     background: white;
 }
 .dashboard .dash1 > div .avatar{
-    width: 50px;
+    /* width: 50px;
     height: 50px;
     border-radius: 50%;
     position: absolute;
     bottom: -19px;
     left: 17px;
     z-index: 1;
+    border: 3px solid white; */
+}
+.dashboard .dash1 > div .personal-img{
+    position: relative;
+width: 50px;
+height: 50px;
+top: 90px;
+z-index: 1
+}
+.dashboard .dash1 > div .personal-img img{
+    border-radius: 50%;
+    width: 100%;
     border: 3px solid white;
+    position: absolute;
+left: 1%;
 }
 .dashboard .dash1 > div h4 , .main-content .box1 > div h4
 {
